# visual_inertial_odometry

./: CMakeLists.txt  README.md  package.xml
core/: CMakeLists.txt
core/visual_inertial_odometry/: CMakeLists.txt  camera.h  frame.h  landmark.h  types.h  visual_inertial_odometry.cc  visual_inertial_odometry.h
core/visual_inertial_odometry/feature_extractor/: point_extractor.cc  point_extractor.h
core/visual_inertial_odometry/feature_tracker/: point_tracker.cc  point_tracker.h  point_tracker_klt.h
ros2/: CMakeLists.txt
ros2/visual_inertial_odometry_ros2/: CMakeLists.txt  stereo_vo_ros2.h  visual_inertial_odometry_node.cc
ros2/visual_inertial_odometry_ros2/launch/: d435_ir.launch.py  rs_launch_ir.launch.py
